plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.2'
    id 'io.spring.dependency-management' version '1.1.0'
    id "com.google.protobuf" version "0.9.2"
}

group = 'ru.leti'
version = '1.0.0'
sourceCompatibility = "19"

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

sourceSets {
    main {
        proto {
            srcDir 'src/main/resources/proto'
        }
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url = uri("https://maven.pkg.github.com/Terross/wise-task-library")
        credentials {
            username = project.findProperty("gpr.user") ?: System.getenv("USERNAME") //ghp_YNPs7OlWm BjsONygIn9yMScphUl3kX3NBNFP
            password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
        }
    }
}

dependencies {

    //grpc dependencies
    implementation 'io.github.lognet:grpc-spring-boot-starter:5.0.0'
    implementation 'io.grpc:grpc-protobuf:1.53.0'
    implementation 'io.grpc:grpc-stub:1.53.0'
    implementation 'com.google.protobuf:protobuf-java-util:3.21.7'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'ru.leti:wise-task-library:1.0.4'

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.postgresql:postgresql:42.2.27'

    implementation 'commons-codec:commons-codec:1.15'

    implementation 'org.mapstruct:mapstruct:1.5.3.Final'

    //observability
    implementation 'io.micrometer:micrometer-tracing-bridge-brave'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'net.ttddyy.observation:datasource-micrometer-spring-boot:1.0.1'
    implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
    implementation 'com.github.loki4j:loki-logback-appender:1.3.2'
    implementation 'io.zipkin.brave:brave-instrumentation-grpc:5.16.0'

    annotationProcessor 'org.projectlombok:lombok:1.18.26'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
    annotationProcessor 'no.entur.mapstruct.spi:protobuf-spi-impl:1.42'
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    compileOnly 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

}

protobuf {
    protoc {
        artifact = "com.google.protobuf:protoc:3.21.7"
    }
    clean {
        delete protobuf.generatedFilesBaseDir
    }
    plugins {
        grpc {
            artifact = "io.grpc:protoc-gen-grpc-java:1.53.0"
        }
    }
    generateProtoTasks {
        all()*.plugins {
            grpc {}
        }
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

compileJava {
    options.compilerArgs += ['--enable-preview']
}

bootRun {
    jvmArgs(['--enable-preview'])
}
